--- a/server/templates/observations.html
+++ b/server/templates/observations.html
@@ -1,7 +1,7 @@
 {% block content %}
     <h1>Observations</h1>
     {% for obs in observs %}
-    <div><p>{{ obs.uuid }}</p></div>
+    <div><a href="{{url_for('static',filename=obs.uuid)}}">{{ obs.uuid }}</a></div>
     <div><p>{{ obs.time }}</p></div>
     {% endfor %}
 {% endblock %}
