Working motion detector

--- a/server/templates/observations.html
+++ b/server/templates/observations.html
@@ -2,6 +2,6 @@
     <h1>Observations</h1>
     {% for obs in observs %}
     <div><a href="{{url_for('static',filename=obs.uuid)}}">{{ obs.uuid }}</a></div>
-    <div><p>{{ obs.time }}</p></div>
+    <div><p>{{ obs.date }}</p></div>
     {% endfor %}
 {% endblock %}
